[gd_scene load_steps=5 format=2]

[ext_resource path="res://textures/arenas/map1.png" type="Texture" id=1]
[ext_resource path="res://scenes/game/HUD/CharacterHUD.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/game/HUD/CharacterHUDReversed.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/game/HUD/GameHUD.gd" type="Script" id=4]

[node name="GameHUD" type="Node2D"]
script = ExtResource( 4 )

[node name="map1" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Characters" type="Node2D" parent="."]

[node name="CharacterHUD1" parent="Characters" instance=ExtResource( 2 )]
position = Vector2( 102, 56 )
scale = Vector2( 0.7, 0.7 )

[node name="CharacterHUD2" parent="Characters" instance=ExtResource( 3 )]
position = Vector2( 1812, 56 )
scale = Vector2( 0.7, 0.7 )

[node name="CharacterHUD3" parent="Characters" instance=ExtResource( 2 )]
position = Vector2( 105, 1043 )
scale = Vector2( 0.7, 0.7 )

[node name="CharacterHUD4" parent="Characters" instance=ExtResource( 3 )]
position = Vector2( 1812, 1043 )
scale = Vector2( 0.7, 0.7 )
